fix:Prevent song information text from overlapping the 'Play' button.
Fixes #155.

--- a/mopidy_musicbox_webclient/static/css/webclient.css
+++ b/mopidy_musicbox_webclient/static/css/webclient.css
@@ -481,7 +481,12 @@ a {
 #infocover {
     height: 50px;
     width: 50px;
-    position: absolute;
+}
+
+.playicon {
+    width: 10%;
+    float: right;
+    text-align: right;
 }
 
 #btplay {
@@ -490,17 +495,16 @@ a {
 
 .songinfo {
     height: 100%;
+    width: 90%;
+    float: left;
 }
 
 .songinfo-text {
     text-align: left;
     line-height: 22px;
-    display:inline-block;
-    padding: 6px;
     color: white;
-    position: absolute;
-    padding-left: 55px;
-    padding-right: 55px;
+    overflow: hidden;
+    padding: 3px;
 }
 
 #nowPlayingpane{
